@startuml

class Creator{
...
+ doSomethingAboutCreation()
+ createProduct(): Product
}
note right: Product p :createProduct()\n p.setColor(), ... p.setSize()
class ConcreteCreatorA {
...
+ createProduct(): Product
}
note bottom:<b>return new</b> ConcreteProductA
class ConcreteCreatorB {
...
+ createProduct(): Product
}

interface Product {
+ setColor()
+ setSize()
}
note top: declares atributes and methods common to all objects\n generated by Creator and subclasses
class ConcreteProductA
class ConcreteProductB

Creator <|-- ConcreteCreatorA
Creator <|-- ConcreteCreatorB

Product <-left- Creator:uses\nto\ncreate
Product <|.. ConcreteProductA

Product <|.. ConcreteProductB
@enduml